# cllama

./: .env.example  .gitignore  README.md  install_ollama.sh  main.py  pyproject.toml
.github/workflows/: dependency-review.yml
src/: main.py
src/agents/: __init__.py  agent.py  weather_assistant.py
src/components/: __init__.py  sidebar.py
src/constants/: __init__.py  variables.py
src/llm/: __init__.py  llm.py
src/states/: __init__.py  agent_state.py
src/tools/: __init__.py  current_weather_tool.py  unified_web_search.py  weather_alerts_tool.py
src/utils/: __init__.py  get_models.py  logger_setup.py
src/workflows/: __init__.py  agentic_workflow.py  workflow.py
tests/: test_llm.py
tests/tools/: test_current_weather_tool.py  test_weather_alerts_tool.py
