[project]
name = "cllama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
author=[{name = "Joshan John", email = "joshanjohn2003@gmail.com"}]
dependencies = [
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.3",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
]


license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/joshanjohn/cllama"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[tool.poetry.dev-dependencies]  
pytest = "^8.0"
