[project]
name = "cllama"
version = "0.1.0"
description = "LLM-powered assistant using LangChain and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Joshan John", email = "joshanjohn2003@gmail.com" }
]

dependencies = [
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.3",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0"
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/joshanjohn/cllama"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
